--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,13 @@ nav ul li a:hover {
 }
 
 /* Logo dos cursos */
+.vscode {
+    width: 90px;
+    float: right;
+    margin: 0;
+    padding: 0;
+}
+
 .html {
     width: 50px;
     float: right;
