--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,17 @@
 /* Estilos básicos */
+
+.jersey-10-regular {
+    font-family: "Jersey 10", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.jersey-10-regular {
+    font-family: "Jersey 10", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 body {
     background-color: #ADD8E6;
     font-family: Arial, sans-serif;
@@ -47,7 +60,6 @@ h2 {
 article {
     background-color: #f1f2f3;
     padding: 20px;
-    font-family: "Jersey 10", sans-serif;
     font-size: 20px;
 
 }
@@ -58,7 +70,8 @@ article {
     align-items: center;
     background-color: #f1f2f3;
     padding: 20px;
-    font-family: "Jersey 10", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     font-size: 20px;
 
 }
@@ -79,7 +92,6 @@ a {
     background-color: #2ECC71;
     display: inline-block;
     color: #ffffff;
-    font-family: "Jersey 10", sans-serif;
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 5px;
@@ -91,7 +103,6 @@ a {
     background-color: #2ECC71;
     display: inline-block;
     color: #ffffff;
-    font-family: "Jersey 10", sans-serif;
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 5px;
